[Cartilage.Views.MatrixView] Don't hide overflow so that badges can be displayed correctly.

--- a/app/assets/stylesheets/cartilage/views/matrix_view.css.less
+++ b/app/assets/stylesheets/cartilage/views/matrix_view.css.less
@@ -24,7 +24,6 @@ ul.matrix-view
 
     border-radius: 5px;
 
-    overflow: hidden;
     text-overflow: ellipsis;
     background-color: white;
 
